@@ -213,8 +213,8 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
       @Override
       public void runConfigurationRemoved(@NotNull RunnerAndConfigurationSettings settings) {
         RunConfiguration configuration = settings.getConfiguration();
-        myHiddenConfigurations.remove(configuration);
-        myShownConfigurations.remove(configuration);
+        myHiddenConfigurations.removeIf(c -> isSameConfiguration(c, configuration));
+        myShownConfigurations.removeIf(c -> isSameConfiguration(c, configuration));
         myConfigurationStatuses.remove(configuration);
         synchronizationScheduler.submit(() -> {
           fireAvailableConfigurationsUpdated();
@@ -225,9 +225,22 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
 
       @Override
       public void runConfigurationChanged(@NotNull RunnerAndConfigurationSettings settings) {
+        RunConfiguration configuration = settings.getConfiguration();
+        if (!myHiddenConfigurations.contains(configuration)) {
+          boolean replaced = myHiddenConfigurations.removeIf(c -> isSameConfiguration(c, configuration));
+          if (replaced) {
+            myHiddenConfigurations.add(configuration);
+          }
+        }
+        if (!myShownConfigurations.contains(configuration)) {
+          boolean replaced = myShownConfigurations.removeIf(c -> isSameConfiguration(c, configuration));
+          if (replaced) {
+            myShownConfigurations.add(configuration);
+          }
+        }
+
         synchronizationScheduler.submit(() -> {
           fireAvailableConfigurationsUpdated();
-          RunConfiguration configuration = settings.getConfiguration();
           if (isShowInDashboard(configuration) ||
               !filterByContent(getConfigurationDescriptors(configuration)).isEmpty()) {
             mySharedState.setServices(getRunConfigurations());
@@ -370,16 +383,20 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
   private boolean isShown(@NotNull RunConfiguration runConfiguration) {
     if (!myTypes.contains(runConfiguration.getType().getId())) return false;
     if (myState.excludedNewTypes.contains(runConfiguration.getType().getId())) {
-      return myShownConfigurations.contains(runConfiguration);
+      return ContainerUtil.exists(myShownConfigurations, c -> isSameConfiguration(c, runConfiguration));
     }
     else {
-      return !myHiddenConfigurations.contains(runConfiguration);
+      return !ContainerUtil.exists(myHiddenConfigurations, c -> isSameConfiguration(c, runConfiguration));
     }
   }
 
   public static @Nullable RunConfiguration getBaseConfiguration(@NotNull RunConfiguration runConfiguration) {
     RunProfile runProfile = ExecutionManagerImpl.getDelegatedRunProfile(runConfiguration);
     return runProfile instanceof RunConfiguration ? (RunConfiguration)runProfile : null;
+  }
+
+  private static boolean isSameConfiguration(@NotNull RunConfiguration c1, @NotNull RunConfiguration c2) {
+    return c1.getType().getId().equals(c2.getType().getId()) && c1.getName().equals(c2.getName());
   }
 
   @Override
@@ -439,14 +456,15 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
     if (type == null) return Collections.emptyList();
 
     List<RunConfiguration> configurations = RunManager.getInstance(myProject).getConfigurationsList(type);
-    return ContainerUtil.filter(configurations, configuration -> !toExclude.contains(configuration));
+    return ContainerUtil.filter(configurations,
+                                configuration -> !ContainerUtil.exists(toExclude, c -> isSameConfiguration(c, configuration)));
   }
 
   @Override
   public void hideConfigurations(@NotNull Collection<? extends RunConfiguration> configurations) {
     for (RunConfiguration configuration : configurations) {
       if (myState.excludedNewTypes.contains(configuration.getType().getId())) {
-        myShownConfigurations.remove(configuration);
+        myShownConfigurations.removeIf(c -> isSameConfiguration(c, configuration));
       }
       else {
         myHiddenConfigurations.add(configuration);
@@ -464,7 +482,7 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
         myShownConfigurations.add(configuration);
       }
       else {
-        myHiddenConfigurations.remove(configuration);
+        myHiddenConfigurations.removeIf(c -> isSameConfiguration(c, configuration));
       }
     }
     syncConfigurations();
@@ -491,6 +509,11 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
         updateDashboard(true);
       }
     }
+  }
+
+  @Override
+  public boolean hasPersistedStatus(@NotNull RunConfiguration configuration) {
+    return getPersistedStatus(configuration) != null;
   }
 
   @Override
@@ -640,11 +663,32 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
 
     myServiceLock.writeLock().lock();
     try {
-      RunDashboardService service = findService(oldDescriptorId);
-      if (service != null) {
-        doDetachServiceRunContentDescriptor(service);
+      RunDashboardService oldService = findService(oldDescriptorId);
+      if (oldService != null && oldService.getConfigurationSettings().equals(settings)) {
+        List<RunDashboardService> services = getServices(settings);
+        if (services != null) {
+          for (RunDashboardService s : services) {
+            if (s != oldService && descriptorId.equals(s.getDescriptorId())) {
+              // Another service already owns descriptorId — detach oldService so it doesn't keep a stale link to oldDescriptorId.
+              doDetachServiceRunContentDescriptor(oldService);
+              return s;
+            }
+          }
+          if (oldService instanceof RunDashboardServiceImpl mainService) {
+            mainService.setDescriptorId(descriptorId);
+            return mainService;
+          }
+          int idx = services.indexOf(oldService);
+          AdditionalRunDashboardService replacement =
+            new AdditionalRunDashboardService(settings, descriptorId, services.getFirst().getScope());
+          services.set(idx, replacement);
+          return replacement;
+        }
       }
 
+      if (oldService != null) {
+        doDetachServiceRunContentDescriptor(oldService);
+      }
       return doAttachServiceRunContentDescriptor(settings, descriptorId);
     }
     finally {
@@ -700,12 +744,8 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
       return null;
     }
 
-    RunDashboardService service = settingsServices.get(0);
-
-    // purely to avoid thinking that frontend debugger might reuse content of the backend run
-    var areDescriptorsWithSameExecutors = areSameOriginDescriptorsBeingExchanged(descriptorId, service);
-
-    if ((!areDescriptorsWithSameExecutors || service.getDescriptorId() == null) && service instanceof RunDashboardServiceImpl mainService) {
+    RunDashboardService service = settingsServices.getFirst();
+    if (service.getDescriptorId() == null && service instanceof RunDashboardServiceImpl mainService) {
       mainService.setDescriptorId(descriptorId);
       return mainService;
     }
@@ -715,16 +755,6 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
       settingsServices.add(newService);
       return newService;
     }
-  }
-
-  private static boolean areSameOriginDescriptorsBeingExchanged(@NotNull RunContentDescriptorId descriptorId, RunDashboardService service) {
-    var existingId = service.getDescriptorId();
-    var resolvedExistingDescriptor = existingId instanceof RunContentDescriptorIdImpl impl ? findContentValue(impl) : null;
-    var resolvedNewDescriptor = descriptorId instanceof RunContentDescriptorIdImpl impl ? findContentValue(impl) : null;
-    var areDescriptorsWithSameExecutors =
-      resolvedExistingDescriptor != null && resolvedNewDescriptor != null
-      && resolvedExistingDescriptor.isHiddenContent() == resolvedNewDescriptor.isHiddenContent();
-    return areDescriptorsWithSameExecutors;
   }
 
   private void doDetachServiceRunContentDescriptor(@NotNull RunDashboardService service) {
